--- a/src/app/components/shared/pokeapi/pokemon-data/pokemon-data.component.html
+++ b/src/app/components/shared/pokeapi/pokemon-data/pokemon-data.component.html
@@ -1,1 +1,6 @@
-<p>pokemon-data works!</p>
+<div>
+  <b>Nombre:</b> {{ nombrePokemon }} <br>
+  <b>ID:</b> {{ idPokemon }}
+</div>
+
+<button (click)="registerNewPokemonList()">Guardar</button>
