componente para crear pokemonList aparte del componente de ver

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,12 @@
   <div class="lateral-bar">
     <div class="lateral-bar-option">
       <button [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['pokemonList']">
-        New
+        New R
+      </button>
+    </div>
+    <div class="lateral-bar-option">
+      <button [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['pokemonListCreate']">
+        New C
       </button>
     </div>
     <div class="lateral-bar-option">
