--- a/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list.component.html
@@ -1,55 +1,27 @@
 <div>
-  <div>
-    <button (click)="indexMinus()">-</button>
-    <input [(ngModel)]="indexAPI" type="number">
-    <button (click)="indexPlus()">+</button>
-    <button (click)="indexPlus()">Seleccionar</button>
-  </div>
-
-  <div *ngIf="pokemonListAPI.length > 0">
-    <p>{{ pokemonSelected.name }}: {{ pokemonSelected.url }}</p>
-    <app-pokeapi-pokemonData
-      [dataPokemonReceived]="pokemonSelected"
-    ></app-pokeapi-pokemonData>
-  </div>
+  <table mat-table [dataSource]="pokemonList" class="mat-elevation-z8">
+  
+    <ng-container matColumnDef="rowNumber">
+      <th mat-header-cell *matHeaderCellDef> # </th>
+      <td mat-cell *matCellDef="let element; let i = index"> {{i+1}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="IDDB">
+      <th mat-header-cell *matHeaderCellDef> IDDB </th>
+      <td mat-cell *matCellDef="let element; let i = index"> {{element.id}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="PokedexIndex">
+      <th mat-header-cell *matHeaderCellDef> Pokedex </th>
+      <td mat-cell *matCellDef="let element"> {{element.idRegistro}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="Nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
-
-
-<!-- <div *ngIf="pokemonListAPI">
-  <div *ngFor="let pokemon of pokemonListAPI">
-    <p>{{ pokemon.name }}: {{ pokemon.url }}</p>
-  </div>
-</div> -->
-
-<table mat-table [dataSource]="pokemonList" class="mat-elevation-z8">
-
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-  <!-- Position Column -->
-  <ng-container matColumnDef="rowNumber">
-    <th mat-header-cell *matHeaderCellDef> # </th>
-    <td mat-cell *matCellDef="let element; let i = index"> {{i+1}} </td>
-  </ng-container>
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> IDDB. </th>
-    <td mat-cell *matCellDef="let element; let i = index"> {{element.id}} </td>
-  </ng-container>
-
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Pokedex </th>
-    <td mat-cell *matCellDef="let element"> {{element.idRegistro}} </td>
-  </ng-container>
-
-  <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Nombre </th>
-    <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-  </ng-container>
-
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
