crear pokemon available on game

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,13 @@
       </button>
     </div>
     <div class="lateral-bar-option">
+      <button [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['availableOnGameCreate']">
+        Ava C
+      </button>
+    </div>
+    <div class="lateral-bar-option">
       <button [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" [routerLink]="['availableOnGame']">
-        Ava
+        Ava R
       </button>
     </div>
     <div class="lateral-bar-option">
