--- a/src/app/components/pokemon-available-on-game/pokemon-available-on-game.component.html
+++ b/src/app/components/pokemon-available-on-game/pokemon-available-on-game.component.html
@@ -1,8 +1,35 @@
-<div>
-  <div *ngFor="let item of pokemonList">
-    <app-card-pokemon-available
-      [pokemon]="item"
-    >
-    </app-card-pokemon-available>
+
+<div class="generalContainer">
+  <div class="evolutionChainContainer" *ngFor="let item of pokemonList">
+    <div class="chainItem">
+      <app-card-pokemon-available
+        [pokemon]="item"
+      >
+      </app-card-pokemon-available>
+    </div>
+    <div>
+      <ng-container *ngIf="item.evolution.length > 0">
+        <ng-container *ngFor="let item2 of item.evolution">
+          <div class="test">
+            <div class="chainItem">
+              <app-card-pokemon-available
+                [pokemon]="item2"
+              >
+              </app-card-pokemon-available>
+            </div>
+            <ng-container *ngIf="item2.evolution.length > 0">
+              <div>
+                <div class="chainItem" *ngFor="let item3 of item2.evolution">
+                  <app-card-pokemon-available
+                    [pokemon]="item3"
+                  >
+                  </app-card-pokemon-available>
+                </div>
+              </div>
+            </ng-container>
+          </div>
+        </ng-container>
+      </ng-container>
+    </div>
   </div>
 </div>
