--- a/src/app/components/shared/cards/pokemon-available/pokemon-available.component.css
+++ b/src/app/components/shared/cards/pokemon-available/pokemon-available.component.css
@@ -1,6 +1,5 @@
 .example-card {
-    max-width: 400px;
-    margin-bottom: 8px;
+    max-width: 300px;
 }
 .mat-card {
     background: #424242;
@@ -8,4 +7,10 @@
 }
 .mat-card-sm-image {
     object-fit: contain;
+    width: 50px;
+    height: 50px;
+}
+.inputEvolutionFrom {
+    background-color: #424242;
+    width: 40px;
 }
